[gd_scene load_steps=10 format=3 uid="uid://2pjs0jp882b8"]

[ext_resource type="PackedScene" uid="uid://5ol0c5vewmjh" path="res://Scenes/Entities/player.tscn" id="1_by2n7"]
[ext_resource type="PackedScene" uid="uid://civrfmnwqnw2l" path="res://Scenes/Entities/enemy_spawner.tscn" id="2_r1lv4"]
[ext_resource type="Script" uid="uid://dca0utk7di8kb" path="res://Scripts/score_keeper.gd" id="3_p5lif"]
[ext_resource type="FontFile" uid="uid://b64wowbafxnxd" path="res://Fonts/prstart.ttf" id="4_3bwat"]
[ext_resource type="Script" path="res://Scripts/score_label_updater.gd" id="5_wlse2"]

[sub_resource type="Gradient" id="Gradient_lienv"]
offsets = PackedFloat32Array(0.0308989, 0.0365169, 0.235955)
colors = PackedColorArray(0.126037, 0.135074, 0.200856, 1, 1, 1, 1, 1, 1, 1, 1, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_00kun"]
gradient = SubResource("Gradient_lienv")
fill_from = Vector2(1, 0)

[sub_resource type="NavigationPolygon" id="NavigationPolygon_yatjs"]
vertices = PackedVector2Array(1910, 1070, 10, 1070, 10, 10, 1910, 10)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2, 3)])
outlines = Array[PackedVector2Array]([PackedVector2Array(0, 0, 1920, 0, 1920, 1080, 0, 1080)])

[sub_resource type="Theme" id="Theme_cmw6u"]
default_font = ExtResource("4_3bwat")

[node name="EnemyDemo" type="Node2D"]

[node name="background" type="Sprite2D" parent="."]
position = Vector2(960, 540)
scale = Vector2(30, 16.875)
texture = SubResource("GradientTexture2D_00kun")

[node name="NavigationRegion2D" type="NavigationRegion2D" parent="."]
navigation_polygon = SubResource("NavigationPolygon_yatjs")

[node name="Enemy_restrictor" type="StaticBody2D" parent="NavigationRegion2D"]
collision_layer = 0
collision_mask = 0

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="NavigationRegion2D/Enemy_restrictor"]
polygon = PackedVector2Array(234, 174, 345, 138, 462, 120, 939, 120, 942, 120, 1425, 120, 1542, 129, 1659, 159, 1746, 234, 1782, 348, 1800, 462, 1806, 582, 1806, 585, 1794, 702, 1764, 816, 1686, 906, 1578, 945, 1464, 960, 942, 975, 939, 975, 495, 966, 384, 954, 276, 930, 177, 849, 144, 732, 123, 615, 117, 498, 117, 495, 129, 378, 156, 261)

[node name="ChaseNavigationRegion2D" type="NavigationRegion2D" parent="."]
navigation_polygon = SubResource("NavigationPolygon_yatjs")

[node name="Player" parent="." instance=ExtResource("1_by2n7")]
position = Vector2(304, 200)

[node name="game_manager" type="Node2D" parent="."]

[node name="EnemySpawner" parent="game_manager" instance=ExtResource("2_r1lv4")]

[node name="Scorekeeper" type="Node2D" parent="game_manager"]
script = ExtResource("3_p5lif")

[node name="ScoreLabel" type="Label" parent="."]
offset_left = 1273.0
offset_top = 951.0
offset_right = 1793.0
offset_bottom = 1013.0
theme = SubResource("Theme_cmw6u")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0.401302, 0.000204989, 0.437144, 1)
theme_override_font_sizes/font_size = 40
text = "SCORE: 10000"
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("5_wlse2")

[connection signal="reset_wave" from="Player" to="game_manager/EnemySpawner" method="_on_player_reset_wave"]
[connection signal="reset_wave" from="Player" to="game_manager/Scorekeeper" method="_on_player_reset_wave"]
[connection signal="enemy_spawned" from="game_manager/EnemySpawner" to="game_manager/Scorekeeper" method="_on_enemy_spawner_enemy_spawned"]
[connection signal="enemy_killed" from="game_manager/Scorekeeper" to="game_manager/Scorekeeper" method="_on_enemy_killed"]
[connection signal="score_updated" from="game_manager/Scorekeeper" to="ScoreLabel" method="_on_scorekeeper_score_updated"]
